--- a/nautobot/project-static/css/base.css
+++ b/nautobot/project-static/css/base.css
@@ -11,6 +11,12 @@ html, body {
 body {
     padding-top: 70px;
 }
+#shelly {
+    background-color: #fff;
+    padding: 10px;
+    border:#999 1px solid;
+    border-radius: 8px;
+}
 .wrapper {
     min-height: 100%;
     height: auto !important;
@@ -663,4 +669,45 @@ td span.hover_copy:hover .hover_copy_button {
 .modal-body {
     max-height: calc(100vh - 212px);
     overflow-y: scroll;
+}
+
+body {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 220px;
+    padding-top: 20px !important;
+}
+
+.navbar-fixed-top {
+    border-bottom-width: 0;
+    border-right-style: solid;
+    border-right-width: 1px;
+    bottom: 0;
+    flex: none;
+    margin-bottom: 0;
+    right: auto;
+    width: 220px;
+}
+
+.nav {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.wrapper {
+    flex: 1;
+}
+
+.footer {
+    flex: none;
+    width: 100%;
+}
+
+.footer .row > :nth-child(2) {
+    width: 25%;
+}
+
+.footer .row > :nth-child(3) {
+    width: 41.66666667%;
 }
